# cmfuzz

./: crypto_fuzzing_survey.md
cmfuzz/: .dockerignore  .gitignore  Dockerfile  README.md
cmfuzz/docs/: CURRENT_STATE.md  DESIGN.md  IMPLEMENTATIONS.md  METHODOLOGY.md  PLAN.md  REBUILD.md  ROADMAP_MATRIX.md  TARGET_SURVEY.md  TESTABLE.md
cmfuzz/engine/: cmfuzz_common.h  ct_dudect.c  ct_dudect_trad.c
cmfuzz/findings/: README.md  TEMPLATE.md
cmfuzz/harness/: comp_authkem_harness.c  comp_hpke_harness.c  comp_kdfchain_harness.c  comp_trad_harness.c  diff_multilib_harness.cpp  fhe_ckks_diff_harness.cpp  fhe_ckks_harness.cpp  fhe_diff_harness.cpp  liboqs_kem_harness.c  liboqs_sig_harness.c  openssl_classic_harness.c  pqc_diff_harness.c  pqc_kat_harness.c  seal_fhe_harness.cpp  seq_aead_harness.c  seq_ecdsa_harness.c  seq_evp_harness.c  seq_pqc_harness.c  trad_metamorphic_harness.c
cmfuzz/harness/bcbridge/: CmfCompute.java
cmfuzz/harness/gobridge/: go.mod  main.go
cmfuzz/harness/rustbridge/: Cargo.toml
cmfuzz/harness/rustbridge/src/: main.rs
cmfuzz/harness/subproc/: compute_aws_lc.c  compute_boringssl.c  compute_botan.cpp  compute_common.h  compute_libgcrypt.c  compute_nettle.c  compute_pycryptodome.py  compute_wolfssl.c  diff_subproc_runner.c  seq_aws_lc_harness.c  seq_boringssl_harness.c  seq_botan_harness.cpp  seq_wolfssl_harness.c
cmfuzz/harness/tfhebridge/: Cargo.toml
cmfuzz/harness/tfhebridge/src/: main.rs
cmfuzz/harness/zkbridge/: Cargo.toml
cmfuzz/harness/zkbridge/src/: main.rs
cmfuzz/results/: RESULTS.md
cmfuzz/results/analysis/: ANALYSIS.md  BLINDSPOTS.md  diff_all7_seed42.txt  diff_seed31337.txt  diff_seed42.txt  pqc_diff.txt
cmfuzz/results/campaign/: log_classic_openssl.txt  log_diff_multilib.txt  log_fhe_seal_bfv.txt  log_kem_BIKE-L1.txt  log_kem_FrodoKEM-640-AES.txt  log_kem_Kyber768.txt  log_kem_ML-KEM-1024.txt  log_kem_ML-KEM-512.txt  log_kem_ML-KEM-768.txt  log_sig_Falcon-1024.txt  log_sig_Falcon-512.txt  log_sig_ML-DSA-44.txt  log_sig_ML-DSA-65.txt  log_sig_ML-DSA-87.txt  log_sig_SLH_DSA_PURE_SHA2_128F.txt  log_trad_metamorphic.txt  summary.tsv
cmfuzz/results/ct/: ct_results.txt  ct_trad_results.txt
cmfuzz/scripts/: build_all.sh  build_aws_lc.sh  build_boringssl.sh  build_botan.sh  build_diff_harness.sh  build_diff_libs.sh  build_fhe_diff.sh  build_gcrypt_diff.sh  build_go_diff.sh  build_harness.sh  build_java_diff.sh  build_liboqs.sh  build_nettle_diff.sh  build_openfhe.sh  build_pqc_diff.sh  build_pqc_kat.sh  build_pqclean.sh  build_py_diff.sh  build_rust_diff.sh  build_seal.sh  build_subproc.sh  build_tfhe.sh  build_wolfssl.sh  build_zk.sh  run_campaign.sh  run_ct.sh  sync_to_local.sh
cmfuzz/spec_gen/: generate_specs.py  llm_client.py
cmfuzz/specs/kem/: BIKE-L1.json  BIKE-L3.json  BIKE-L5.json  Classic-McEliece-348864.json  Classic-McEliece-348864f.json  Classic-McEliece-460896.json  Classic-McEliece-460896f.json  (+34 more)
cmfuzz/tests/: negative_tests.sh
(+248 files in other folders)
