[package]
name = "cmfuzz-rustbridge"
version = "0.1.0"
edition = "2021"
# CMFuzz stage 2.4 — RustCrypto cross-language differential backend. Speaks the
# same subprocess wire protocol as the C compute CLIs / the Go backend, but
# computes every primitive with the RustCrypto crates + dalek — a third,
# independent implementation lineage for the O1 differential.

[[bin]]
name = "compute_rust"
path = "src/main.rs"

[features]
# Build-time fault injection: corrupts the first output so the negative
# self-test can prove the differential catches a divergence.
fault = []

[dependencies]
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hkdf = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = "2"
x25519-dalek = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = "0.9"

# --- transitive-dependency pins for Rust 1.83 (MSRV) compatibility ---
# Newer releases of these crates raise their MSRV / require edition2024, which
# rustc 1.83 cannot build; pin to the last versions that still compile.
zeroize = "=1.8.1"
zeroize_derive = "=1.4.2"
base64ct = "=1.6.0"

[profile.release]
opt-level = 2
